# The-Conversoin-Engine-Ground-Truth

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  Z.md  ZZ.md  ZZZ.md  Zinterim.md  pyproject.toml
.github/workflows/: CI.yml
configs/: eval_config.yaml  training_config.yaml
data/raw/: llm_traces.jsonl
data/splits/: dev.json  heldout.json
data/tasks/: programmatic_tasks.json  trace_tasks.json
docs/: audit_memo.md  memo.md  methodology.md
models/: model_card.md
models/judge/: README.md
notebooks/: baseline.md  eval_judge_colab.ipynb  eval_prompted_judge_colab.ipynb  exploratory_data.ipynb  training_logs.ipynb
reports/: Tenacious-Bench v0.1 Decision Memo.md  blog_post.md  executive_memo.md  exploratory_data_summary.json  openrouter_usage.jsonl
reports/evaluation/: ablation_results.json  baseline_metrics.json  baseline_pair_scores.jsonl  baseline_pointwise_scores.jsonl  evaluation_metric_comparison.csv  evaluation_metric_comparison.json  fine_tuned_judge_pair_scores.jsonl  held_out_traces.jsonl  prompted_judge_metrics.json  prompted_judge_pair_scores.jsonl  prompted_judge_pointwise_scores.jsonl
reports/training/: dataset_summary.json  training_config_used.yaml
scripts/: run_pipeline.bat
src/data_prep/: create_preference_pairs.py  split_dataset.py  synthetic_pairs.py  trace_tasks.py
src/evaluation/: eval_baseline.py  eval_judge.py  eval_prompted_judge.py
src/integration/: run_with_judge.py
src/training/: train_judge.py  utils.py
tenacious_bench/: contamination_check.json  dataset_report.json  schema.json
(+12 files in other folders)
